# ADSDKProj

./: .gitignore  README.md  bintrayUserInfo.properties  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_gdttest.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gdt_advertisement_sdklibrary/: build.gradle
gdt_advertisement_sdklibrary/src/main/: AndroidManifest.xml
gdt_advertisement_sdklibrary/src/main/res/layout/: activity_native_express.xml
gdt_advertisement_sdklibrary/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
ndktool/: build.gradle
ndktool/jni/: CMakeLists.txt
ndktool/jni/src/: AdNdktool.cpp  AdNdktool.h  AdProxyInterface.h
ndktool/src/main/: AndroidManifest.xml
ndktool/src/main/res/values/: strings.xml
vitoadlibs/: .project  build.gradle  proguard-rules.pro  upload_bintray.gradle
vitoadlibs/src/main/: AndroidManifest.xml
vitoadlibs/src/main/java/com/vito/: ADFileProvider.java
vitoadlibs/src/main/res/drawable/: btn.xml  btn_bg_corner.xml  btn_close_bg_corner.xml
vitoadlibs/src/main/res/layout/: landing_cover.xml  landing_page.xml  landing_page2.xml  landing_page_web.xml  native_ad_activity_layout.xml  native_ad_layout.xml  native_ad_layout_img.xml  player_view.xml
vitoadlibs/src/main/res/values/: attrs.xml  strings.xml
vitoadlibs/src/main/res/xml/: download_path.xml
(+108 files in other folders)
